{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1619,
  "lineage": "2c56a956-9d2c-cd1f-6df6-cb53b4ff5edc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02f38d5633c88e6eb",
            "public_dns": "ec2-34-202-44-172.compute-1.amazonaws.com",
            "public_ip": "34.202.44.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #001"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-058e5d8aac32138e7",
            "public_dns": "ec2-3-91-165-220.compute-1.amazonaws.com",
            "public_ip": "3.91.165.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0605c20033a932c9b",
            "public_dns": "ec2-18-232-183-206.compute-1.amazonaws.com",
            "public_ip": "18.232.183.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #003"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423750041257:loadbalancer/elb-001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 10,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-001-1832784640.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 4
              }
            ],
            "id": "elb-001",
            "idle_timeout": 30,
            "instances": [
              "i-05a6dda50ecb3bec5"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "HTTP",
                "lb_port": 8080,
                "lb_protocol": "HTTP"
              },
              {
                "instance_port": 80,
                "instance_protocol": "HTTP",
                "lb_port": 80,
                "lb_protocol": "HTTP"
              }
            ],
            "name": "elb-001",
            "security_groups": [
              "sg-08361cc9170979491"
            ],
            "source_security_group": "423750041257/sg_generic",
            "source_security_group_id": "sg-08361cc9170979491",
            "subnets": [
              "subnet-0272109d88cb7e0c2",
              "subnet-04dac8906b97e3819",
              "subnet-0a7eab84867ae587e"
            ],
            "tags": {
              "Name": "elb-001"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.ec2_generic",
            "aws_key_pair.kp_001",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_generic",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-05a6dda50ecb3bec5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a6dda50ecb3bec5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027886e61b60566f3",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-18-212-228-21.compute-1.amazonaws.com",
            "public_ip": "18.212.228.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f83f435a89f41218",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7eab84867ae587e",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #001",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08361cc9170979491"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-0a971fc63e8087e04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a971fc63e8087e04",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7af1624e1b504bd",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-54-196-93-45.compute-1.amazonaws.com",
            "public_ip": "54.196.93.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be8233b88ae87528",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dac8906b97e3819",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #002",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08361cc9170979491"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-08f3c873030d3f716",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f3c873030d3f716",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7f39110180d8d86",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_ip": "10.0.3.10",
            "public_dns": "ec2-34-205-9-2.compute-1.amazonaws.com",
            "public_ip": "34.205.9.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f439d581c256aef1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0272109d88cb7e0c2",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #003",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08361cc9170979491"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c5f89322b9138d39",
            "owner_id": "423750041257",
            "tags": {
              "Name": "INTERNET-GATEWAY #001"
            },
            "vpc_id": "vpc-0e68728525aa6961c"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00744a0e44889cfcf",
            "owner_id": "423750041257",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5f89322b9138d39",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ROUTE-TABLE #001"
            },
            "vpc_id": "vpc-0e68728525aa6961c"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaff0ee0a6f95215",
            "route_table_id": "rtb-00744a0e44889cfcf",
            "subnet_id": "subnet-0a7eab84867ae587e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b71a16c43080ff50",
            "route_table_id": "rtb-00744a0e44889cfcf",
            "subnet_id": "subnet-04dac8906b97e3819"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a92dd12a566a0f",
            "route_table_id": "rtb-00744a0e44889cfcf",
            "subnet_id": "subnet-0272109d88cb7e0c2"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_generic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:security-group/sg-08361cc9170979491",
            "description": "IMPORTANTE: permite acceso = SSH - HTTP - HTTPs - TOMCAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08361cc9170979491",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_generic",
            "name_prefix": null,
            "owner_id": "423750041257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SECURITY-GROUP #001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e68728525aa6961c"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_generic",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-0a7eab84867ae587e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a7eab84867ae587e",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #001"
            },
            "vpc_id": "vpc-0e68728525aa6961c"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-04dac8906b97e3819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04dac8906b97e3819",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #002"
            },
            "vpc_id": "vpc-0e68728525aa6961c"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-0272109d88cb7e0c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0272109d88cb7e0c2",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #003"
            },
            "vpc_id": "vpc-0e68728525aa6961c"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:vpc/vpc-0e68728525aa6961c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d2bc19185b27494",
            "default_route_table_id": "rtb-0c4c8b482351cc2f8",
            "default_security_group_id": "sg-001d1d1b20e950d15",
            "dhcp_options_id": "dopt-19c36463",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e68728525aa6961c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c4c8b482351cc2f8",
            "owner_id": "423750041257",
            "tags": {
              "Name": "VPC #001"
            }
          }
        }
      ]
    }
  ]
}